Readme desccription  added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+G:\DS Projects\End To End Projects\House_Price_prediction_end_to_end\Linear Regression ML Implementation.ipynb
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
